added title to the dl queue object

--- a/svelte/index.html
+++ b/svelte/index.html
@@ -7,7 +7,7 @@
     <title>Vite + Svelte + TS</title>
   </head>
   <body>
-    <div id="app" class="w-full"></div>
+    <div id="app" class="container mx-auto"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
